fix: align mention chips with text

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1818,7 +1818,7 @@ button[draggable="false"] {
   font-weight: 600;
   line-height: 1.3;
   text-decoration: none;
-  vertical-align: 0.08em;
+  vertical-align: -0.1em;
   white-space: nowrap;
   user-select: none;
 }
@@ -2553,7 +2553,7 @@ a.rudder-project-mention-chip {
   font-weight: 600;
   line-height: 1.3;
   text-decoration: none;
-  vertical-align: 0.08em;
+  vertical-align: -0.1em;
   white-space: nowrap;
 }
 
